--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,8 @@
 const today = new Date();
 ---
 
-<footer class="mt-16 py-12 px-4 bg-black/80 border-t border-cyber-purple text-cyber-gray w-full box-border">
-	<div class="max-w-site mx-auto flex justify-between items-center flex-wrap gap-6">
+<footer class="mt-16 py-12 bg-black/80 border-t border-cyber-purple text-cyber-gray w-full box-border">
+	<div class="w-full max-w-site mx-auto flex justify-between items-center flex-wrap gap-6 px-8">
 		<div class="text-cyber-gray-dark text-sm">
 			&copy; {today.getFullYear()} Fat Bat Studio. All rights reserved.
 		</div>
